Fixes card alignment

--- a/ovd-website/src/app/app.component.css
+++ b/ovd-website/src/app/app.component.css
@@ -2,6 +2,10 @@
     padding-top: 60px;
 }
 
+.cards {
+  display: flex;
+}
+
 .card {
     width: 20rem;
 }
